--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Shop latest trends and launches for your home at ArtHome. Providing an inspiring wide range of products, for all life's moments."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ArtHome</title>
   </head>
   <body class="box-border overflow-x-hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
